--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a{
 .headerTop{ 
   background-color: black;
   color: aliceblue;
-  padding: 6px 0;
+  padding: 6px 16px;
 }
 
 
@@ -37,6 +37,7 @@ a{
 
 .headerBottom{
   box-shadow: 0 -5px 50px black;
+  padding: 10px 16px;
 }
 
 .headerBottomContent{
@@ -44,6 +45,7 @@ a{
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  position: relative;
 }
 
 .headerBottom img{
@@ -51,6 +53,13 @@ a{
   height: auto;
 }
 
+.menuNav{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+}
 .menuNav ul{
   display: flex;
   gap: 15px;
@@ -64,8 +73,34 @@ a{
   height: 100%;
 }
 
+.searchBoxContainner{
+  margin-right: 80px;
+}
+
 .flagsContainner img{
   width: 20px;
   height: auto;
 }
 
+.flagsContainner{
+  position: absolute;
+  right: 0px;
+}
+
+.mainContainner{
+  max-width: 1140px;
+  margin: 25px auto;
+
+}
+
+.carrossel{
+  height: 400px;
+}
+
+.carrossel img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position:50% 25%;
+  border-radius: 15px;
+}
